[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "newsheadlines"
version = "0.0.1"
description = "Latest news headlines fetcher"
authors = [{ name = "Theo Maillard", email = "theomaillard11@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
keywords = ["news", "headlines"]
license = "MIT"
license-files = [
    "LICENSE",
]
dependencies = [
    "beautifulsoup4",
    "requests-cache"
]

[project.urls]
Repository = "https://github.com/theomaillard/newsheadlines"